css addition to page content

--- a/site/index.html
+++ b/site/index.html
@@ -250,7 +250,7 @@ $("#arrow").show(500);
                             </div>
 
                             <div class="card room4 zoom" style="width:300px;">
-                              <img src="image/single.jpg" alt="" style="width:300px;height: 300px;">
+                              <img src="image/Single.jpg" alt="" style="width:300px;height: 300px;">
                                 <h1  align="center">Single Room</h1>
                                 <div class="star" align="left" style="background-color: blue;">
                                           <ul>
