--- a/asite/index.html
+++ b/asite/index.html
@@ -17,14 +17,18 @@
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 			  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a class="navbar-brand" href="#">SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			    <a class="navbar-brand" href="#">
+			    	<img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">&#9882;SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			    <ul class="navbar-nav mr-auto mt-2 mt-lg-1">
+			    	&nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item active">
 			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 			      </li>
+			      &nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item">
 			        <a class="nav-link" href="#">Articles</a>
 			      </li>
+			      &nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item">
 			        <a class="nav-link" href="#">Features</a>
 			      </li>
