--- a/asite/index.html
+++ b/asite/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     </head>
-    <body>
+  <body>
     	<nav class="navbar navbar-expand-lg navbar-light"style="background-color: #e3f2fd;">
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 			  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <a class="navbar-brand" href="#">
-			    	<img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">&#9882;SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			    	<img src=".image/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">&#9882;SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <ul class="navbar-nav mr-auto mt-2 mt-lg-1">
 			    	&nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item active">
@@ -39,10 +39,13 @@
 			    </form>
 			  </div>
 		</nav>
+
+
+
         <div class="jumbotron text-center" style="background-image: url(image/Deluxe.jpg)";>
-  <h1>Articles Page</h1>
-  
-  <p>Here We can Add the Theme</p>
+				  <h1>Articles Page</h1>
+				  
+				  <p>Here We can Add the Theme</p>
 
 
 
