--- a/asite/index.html
+++ b/asite/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Article website index</title>
+        <title>Article website index &#9882;</title>
         <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -18,7 +18,7 @@
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 			  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <a class="navbar-brand" href="#">
-			    	<img src=".image/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">&#9882;SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			    	<img src="image/logo.jpg" style="border-radius: 20px;" width="30" height="30" class="d-inline-block align-top" alt="">	SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <ul class="navbar-nav mr-auto mt-2 mt-lg-1">
 			    	&nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item active">
