--- a/asite/index.html
+++ b/asite/index.html
@@ -32,6 +32,14 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="#">Features</a>
 			      </li>
+			      &nbsp;&nbsp;&nbsp;&nbsp;
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Services</a>
+			      </li>
+			      &nbsp;&nbsp;&nbsp;&nbsp;
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Features</a>
+			      </li>
 			    </ul>
 			    <form class="form-inline my-2 my-lg-0">
 			      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
