--- a/asite/index.html
+++ b/asite/index.html
@@ -16,7 +16,7 @@
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-			  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			  	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <a class="navbar-brand" href="#">
 			    	<img src="image/logo.jpg" style="border-radius: 20px;" width="30" height="30" class="d-inline-block align-top" alt="">	SAI RAM</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			    <ul class="navbar-nav mr-auto mt-2 mt-lg-1">
