--- a/asite/index.html
+++ b/asite/index.html
@@ -38,7 +38,7 @@
 			      </li>
 			      &nbsp;&nbsp;&nbsp;&nbsp;
 			      <li class="nav-item">
-			        <a class="nav-link" href="#">Features</a>
+			        <a class="nav-link" href="#">Help</a>
 			      </li>
 			    </ul>
 			    <form class="form-inline my-2 my-lg-0">
@@ -50,10 +50,24 @@
 
 
 
-        <div class="jumbotron text-center" style="background-image: url(image/Deluxe.jpg)";>
+        <div class="jumbotron text-center img-responsive"  style="background-image: url(image/Deluxe.jpg)" onresize="fit" ;>
 				  <h1>Articles Page</h1>
 				  
 				  <p>Here We can Add the Theme</p>
+
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+<p>Here We can Add the Theme</p>
+
+
+
 
 
 
