--- a/asite/index.html
+++ b/asite/index.html
@@ -15,6 +15,12 @@
 			    background-color: #1abc9c; /* Green */
 			    color: #ffffff;
 			  }
+			  body {
+      
+      font-family:'TIMES NEW ROMAN', sans-serif;
+      background-color: rgb(9,25,42);
+       background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    }
 			  </style>
     </head>
   <body>
