--- a/asite/index.html
+++ b/asite/index.html
@@ -62,7 +62,7 @@
 		</nav>
 
 
-     <section id="home">   <div class="jumbotron text-center "  style="background-image: url(image/Deluxe.jpg)" ;>
+     <section id="home">   <div class="jumbotron text-center "  style="background-image:linear-gradient(to top, #30cfd0 0%, #330867 100%) /* url(image/Deluxe.jpg) */" ;>
 				 <div class="container text-white container-sm">
 				  	
 				  <h1 ><mark class="btn-primary" style="border-radius: 10px;padding: 5px;">First Article</mark></h1>
@@ -84,7 +84,7 @@
 						</blockquote>
 				</div>
 		</div></section>
-		     <section id="articl">   <div class="jumbotron text-center "  style="background-image: url(image/Deluxe.jpg)" ;>
+		     <section id="articl">   <div class="jumbotron text-center "  style="background-image: linear-gradient(to top, #30cfd7 0%, #310867 100%) /*  url(image/Deluxe.jpg */" ;>
 				 <div class="container text-white container-sm">
 				  	
 				  <h1 ><mark class="btn-primary" style="border-radius: 10px;padding: 5px;">First Article</mark></h1>
