--- a/asite/index.html
+++ b/asite/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Article website index &#9882;</title>
+        <link rel="icon" href="image/logo.jpg" type="image/icon type">	
         <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -66,7 +67,14 @@
 			      <a class="nav-link" href="#">Help</a>
 			      </li>
 		</nav>
+		
 
+		<section>
+			<audio controls="false" autoplay="true" loop="true">
+				<source src="./Mandolin.mp3"  type="audio/mp3">
+			</audio>
+			
+		</section>
 
         
         <div class="jumbotron text-center "  style="background-image:linear-gradient(to top, #30cfd0 0%, #330867 100%) /* url(image/Deluxe.jpg) */" ;>
@@ -93,10 +101,10 @@
 
 
 
-		 <div class="jumbotron text-center "  style="background-image: url(image/Deluxe.jpg)" ;>
+		 <div class="jumbotron text-center "  style="background-image:linear-gradient(to top, #30cfd0 0%, #330867 100%) /*  url(image/Deluxe.jpg */" ;>
 				 <div class="container text-white container-sm">
 
-				  <h1 ><mark class="btn-primary" style="border-radius: 10px;padding: 5px;">First Article</mark></h1>
+				  <h1 ><mark class="btn-primary" style="border-radius: 10px;padding: 5px;">Second Article</mark></h1>
 
 
 				  	<br><br>
@@ -105,7 +113,7 @@
 						<blockquote class="blockquote text-center">
 							<p class="mb-0">&nbsp;&quot;I am a very fun loving person, so it's very hard for me to get sad over things. But lately, it has become so easy for me to lose my smile and spirit. I don't know what exactly, but I become irritated very soon. Maybe, it's a mix of all the scars that my soul has absorbed all these years. So what happens is that I am having a normal day, but suddenly, a thought enters my mind, and I feel a pinch in my heart. You know, like I skip a heartbeat or something. It almost triggers something in my brain, and I get drowned into this deep, dark well. I don't want to, but I keep thinking about it. And before I know it, I am sad. I am so, so sad that it feels as if I just had a heartbreak. But that's not true, I was fine a minute before. So, how can it happen to me?
 
-		</div>
+		
 							You know, I myself try to explain it to me that you think too much. It's nothing. You created this hell for yourself. Just stop overthinking, and you will be fine. I swear I know it's very stupid and crazy. I realize that you might be thinking that I am doing some drama. But I am not. I do realize how it sounds. But it happens to me. How can I explain it to you that I feel helpless when it hits me. I am not a sadist. I want to be happy. I don't want to waste a second of my life thinking about the past. But I get pulled into it. And I try to just ignore it. I open my mobile, and I start to watch a funny video or read a meme. I try to listen to peppy songs. But it doesn't solve it. I can still feel that my soul is stuck somewhere. I feel as if someone caught hold of my heart, and that monster is squeezing my heart into pain. I don't act panicked. I have people around me. So I act all cool. I smile. I laugh. And I try to fake that I am fine. But in those moments of darkness, I feel so helpless.
 
 
@@ -117,4 +125,4 @@
 				</div>
 		</div>
     </body>
-</html> 
+</html>
