--- a/asite/index.html
+++ b/asite/index.html
@@ -66,15 +66,26 @@
 			       <li class="nav-item">
 			      <a class="nav-link" href="#">Help</a>
 			      </li>
+			  </ul>
+
+
+			  	<section>
+					<audio controls="false" src="./Mandolin.mp3" autoplay="true" loop="true">
+						<!-- <source src="./Mandolin.mp3"  type="audio/mp3">
+											 --></audio>	
+				</section>
+
+
+			  <form class="form-inline my-2 my-lg-0">
+			      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			    </form>
+			</div>
 		</nav>
+
 		
 
-		<section>
-			<audio controls="false" autoplay="true" loop="true">
-				<source src="./Mandolin.mp3"  type="audio/mp3">
-			</audio>
-			
-		</section>
+		
 
         
         <div class="jumbotron text-center "  style="background-image:linear-gradient(to top, #30cfd0 0%, #330867 100%) /* url(image/Deluxe.jpg) */" ;>
