--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -4,12 +4,56 @@
     <title>
         Module2 solution page
     </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/module2.css">
 </head>
 <body>
+    <marquee  direction="  ">&copy Santosh Botagi</marquee>
     <main>
         <header>
-           <h1> Our Contents </h1>
+           <h1 class="heading" style="float: center;"> Our Contents </h1>
         </header>
+
+
+        <section class="section">
+            <div class="div1">
+                <span><h4>Menu1</h4></span>
+                <p>
+                    Create a folder in your repository that will serve as 
+                    a container folder for your solution to this assignment.
+                     You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html file inside the solution container folder, e.g., module2-solution/index.html
+                </p>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="div1">
+               <span><h4>Menu2</h4></span> 
+                <p>
+                    Create a folder in your repository that will serve as
+                    a container folder for your solution to this assignment.
+                    You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html
+                    file inside the solution container folder, e.g., module2-solution/index.html
+                </p>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="div1">
+                <span><h4>Menu3</h4></span>
+                <p>
+                    
+                    Create a folder in your repository that will serve as
+                    a container folder for your solution to this assignment.
+                    You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html
+                    file inside the solution container folder, e.g., module2-solution/index.html
+                    
+                </p>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
