--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -16,7 +16,7 @@
            <h1 class="heading" style="float: center;"> Our Contents </h1>
         </header>
 
-
+    <section class="main-sec">
         <section class="section">
             <div class="div1">
                 <span><h4>Menu1</h4></span>
@@ -53,7 +53,7 @@
                 </p>
             </div>
         </section>
-
+    </section>
     </main>
 </body>
 </html>
