second article updated

--- a/asite/index.html
+++ b/asite/index.html
@@ -116,19 +116,32 @@
 				 <div class="container text-white container-sm">
 
 				  <h1 ><mark class="btn-primary" style="border-radius: 10px;padding: 5px;">Second Article</mark></h1>
-
+						<h2>Long Distance Friendship</h2>
 
 				  	<br><br>
 
 
 						<blockquote class="blockquote text-center">
-							<p class="mb-0">&nbsp;&quot;I am a very fun loving person, so it's very hard for me to get sad over things. But lately, it has become so easy for me to lose my smile and spirit. I don't know what exactly, but I become irritated very soon. Maybe, it's a mix of all the scars that my soul has absorbed all these years. So what happens is that I am having a normal day, but suddenly, a thought enters my mind, and I feel a pinch in my heart. You know, like I skip a heartbeat or something. It almost triggers something in my brain, and I get drowned into this deep, dark well. I don't want to, but I keep thinking about it. And before I know it, I am sad. I am so, so sad that it feels as if I just had a heartbreak. But that's not true, I was fine a minute before. So, how can it happen to me?
+							<p class="mb-0">&nbsp;&quot;No-one talks about this, No-one feels it harder but it's as difficult and as beautiful as long distance relationships. A long distance friend is the most beautiful thing a person can have nowadays							.
 
-		
-							You know, I myself try to explain it to me that you think too much. It's nothing. You created this hell for yourself. Just stop overthinking, and you will be fine. I swear I know it's very stupid and crazy. I realize that you might be thinking that I am doing some drama. But I am not. I do realize how it sounds. But it happens to me. How can I explain it to you that I feel helpless when it hits me. I am not a sadist. I want to be happy. I don't want to waste a second of my life thinking about the past. But I get pulled into it. And I try to just ignore it. I open my mobile, and I start to watch a funny video or read a meme. I try to listen to peppy songs. But it doesn't solve it. I can still feel that my soul is stuck somewhere. I feel as if someone caught hold of my heart, and that monster is squeezing my heart into pain. I don't act panicked. I have people around me. So I act all cool. I smile. I laugh. And I try to fake that I am fine. But in those moments of darkness, I feel so helpless.
+							In today's world, we bond with people on internet faster than in person. They know me better than anyone and better than I actually know myself.
 
+							Even though we may have our fights, we always make it through the rough patches by just sharing a meme or quote, isn't it?
 
-							I wish someone could come and hug me into peace. Don't cure me. But at least, listen to me. Tell me that you understand how I feel. Tell me that I am not crazy. Tell me that it happens to others too. Tell me that I will be fine. I will be fine, right? I know I will be. I am a fighter. I am not giving up. But will you help me? 😊&nbsp;&quot;
+							I feel like even if we can't see each other physically, Our bond is closer than most. It's so easy to open up to you and go to you with any problems. We always put our hearts on our sleeve and are willing to help at the drop of a hat, which I adore.
+							Other than my best friend in real life, you are the most important person in my life.
+							•••••
+							You're the person who has never left my life, you're been my constant in a world where everyone leaves.
+
+							You've always cared for my well-being and happiness, have never given up on me, which I appreciate. Being friends, it's important to be real with each other and tell eachother anything that's on our minds.
+							•••••
+							Even oceans away, I still feel as though you're five minutes away from me. I feel emotionally connected to you.
+
+							I honestly don't even know how to put our friendship and our love and bonding for each other into words.
+							•••••
+							One day, we will be able to meet again and it'll be the best day of our lives. I swear, now it's my mission to meet you.
+
+							With Love.	😊&nbsp;&quot;
 							</p>
 							<br>
 							<b>---Rahul Kaushik</b>
