second article updated

--- a/asite/index.html
+++ b/asite/index.html
@@ -144,7 +144,7 @@
 							With Love.	😊&nbsp;&quot;
 							</p>
 							<br>
-							<b>---Rahul Kaushik</b>
+							<b>---A Writer Who Clicks</b>
 						</blockquote>
 				</div>
 		</div>
