third article updated

--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -17,7 +17,7 @@
         </header>
 
     <section class="row">
-            <div class="column">
+            <!-- <div class="column">
                 <span><h4>Menu1</h4></span><br>
                 <br>
                 <p>
@@ -51,8 +51,35 @@
                     file inside the solution container folder, e.g., module2-solution/index.html
                     
                 </p>
-            </div>
-    </section>
+            </div> -->
+
+  <div class="row">
+  <div class="column">
+   <div class="card"><span><h4>Menu1</h4></span><br><br>
+    <P>Create a folder in your repository that will serve as
+                    a container folder for your solution to this assignment.
+                    You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html
+                    file inside the solution container folder, e.g., module2-solution/index.html
+                    </P></div>
+  </div>
+  <div class="column">
+    <div class="card"><span><h4>Menu2</h4></span><br><br><P>Create a folder in your repository that will serve as
+                    a container folder for your solution to this assignment.
+                    You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html
+                    file inside the solution container folder, e.g., module2-solution/index.html
+                    </P></div>
+  </div>
+  <div class="column">
+    <div class="card"><span>
+        <h4>Menu3</h4>
+    </span><br><br><P>Create a folder in your repository that will serve as
+                    a container folder for your solution to this assignment.
+                    You can call it whatever you want. For example, module2-solution or mod2_solution, etc. Create an index.html
+                    file inside the solution container folder, e.g., module2-solution/index.html
+                    </P></div>
+  </div>
+</div>
+        </section>
     </main>
 </body>
 </html>
