--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -48,7 +48,7 @@
         </nav>
     </header><!-- /header -->
 
-       <span class="menu"> <h1>Our  Menu</h1> </span>
+       <span class="menu text-center"> <h1>Our  Menu</h1> </span>
             
             <div id="Breakfast" class="text-center   container-fluid">
                 <span class="text-center"><h2>Chicken</h2></span>
