--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Module3_solution</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="mod.css">
 </head>
@@ -28,10 +28,9 @@
                     </ul>
                 </div>
             </div>
-
+<pre>Follow On Insta</pre>
             <form class="form-inline my-2 my-lg-0">
-                  
-                  <a href="https://www.instagram.com/_muttu_reddy/" target="_blank" class="btn btn-outline-success my-2 my-sm-0" type="submit">Follow on Insta</a>
+                  <a href="https://www.instagram.com/_muttu_reddy/" target="_blank" class="btn btn-outline-success my-2 my-sm-0" type="submit">Follow</a>
                 </form>
             
         </nav>
