module 4 solution updated

--- a/module4_solution/easier/index.html
+++ b/module4_solution/easier/index.html
@@ -3,11 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="SpeakHello.js"></script>
- <script src="SpeakGoodBye.js"></script>
- <script src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="./style.css">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+ 
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <header class="text-center navbar navbar-dark bg-light">
+<h2>  	Module 4 Solution </h2>
+  </header>
+
+
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
