module 4 solution updated

--- a/module4_solution/index.html
+++ b/module4_solution/index.html
@@ -14,10 +14,25 @@
 </head>
 <body>
   <header class="text-center navbar navbar-dark bg-light">
-<h2>  	Module 4 Solution </h2>
+<h2> Module 4 Solution </h2>
   </header>
-
-
+<br>
+			<div class="container-fluid text-center">
+				<p class="text-center">
+					<h3 id="op">THE OUTPUT OF THE MODULE 4 IS IN CONSOLE</h3>
+					<br><br><hr>
+					<p>
+						To View The Output Click "Ctrl + Shift + I" 
+						<br>
+						<br><br>
+						Or Inspect the Page
+					</p>
+				</p>
+			
+			<footer class="modal-footer">
+				<h4>&copy;Santosh Botagi</h4>
+			</footer>
+			</div>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
