module 4 solution updated

--- a/module4_solution/index.html
+++ b/module4_solution/index.html
@@ -24,10 +24,22 @@
 					<p>
 						To View The Output Click "Ctrl + Shift + I" 
 						<br>
-						<br><br>
 						Or Inspect the Page
 					</p>
-				</p>
+
+					
+					<p class="op"> 
+						Hello Yaakov <br>
+						Good Bye John <br>
+						Good Bye Jen <br>
+						Good Bye Jason <br>
+						Hello Paul <br>
+						Hello Frank <br>
+						Hello Larry <br>
+						Hello Paula <br>
+						Hello Laura <br>
+						Good Bye Jim <br>
+					</p>
 			
 			<footer class="modal-footer">
 				<h4>&copy;Santosh Botagi</h4>
