--- a/module4_solution/index.html
+++ b/module4_solution/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
